feat(spin-java-module): enable Class Data Sharing for jlink runtime images (#155)